# libo

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README.md  TEST-CREATION.xlsx  configure.ac  libo.pc  libo.pc.in
HOLD/: Makefile
extras/: sheet-format.txt
include/: libo.h
src/: libo-xl-styles.c  libo-xl-theme.c  libo.c  test-libo.c
windows/: Makefile
xlsx/: [Content_Types].xml  all.xlsx
xlsx/docProps/: app.xml  core.xml
xlsx/xl/: calcChain.xml  sharedStrings.xml  styles.xml  workbook.xml
xlsx/xl/pivotCache/: pivotCacheDefinition1.xml  pivotCacheRecords1.xml
xlsx/xl/pivotTables/: pivotTable1.xml
xlsx/xl/worksheets/: sheet1.xml  sheet2.xml  sheet3.xml
